@@ -1,3 +1,7 @@
+2011-04-30  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/readline.c (clear_eoline): More efficient clear line algorithm.
+
 2011-04-29  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/mouse.c (apply_zoom):  Prevent double-free of custom font for tic
